--- a/hpr-controller.css
+++ b/hpr-controller.css
@@ -1,5 +1,5 @@
 .controller.custom {
-  background-image: url(https://i.imgur.com/fVL896a.png);
+  background-image: url("https://i.imgur.com/fVL896a.png");
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
